--- a/frontend/src/Recursos/EstilizacaoCompartilhada/detalhes_popover.module.css
+++ b/frontend/src/Recursos/EstilizacaoCompartilhada/detalhes_popover.module.css
@@ -23,6 +23,26 @@
     pointer-events: auto;
 }
 
+.icone_item {
+    display: inline-block;
+    position: relative;
+    width: 10vh;
+    border: 3px solid #7b7b7b77;
+    border-radius: 5%;
+    box-shadow: inset 0px 0px 9px 2px #85858555;
+    padding: 2%;
+    pointer-events: auto;
+}
+
+.icone_item img {
+    width: 100%;
+}
+
+.icone_item:hover {
+    border-color: #2684FF;
+    box-shadow: inset 0px 0px 5px 1px black, 0 0 0 1px #2684FF;
+}
+
 .icone:hover {
     border-color: #2684FF;
     box-shadow: inset 0px 0px 5px 1px black, 0 0 0 1px #2684FF;
@@ -68,4 +88,19 @@
 .botao_principal {
     padding: 1vh .7vw;
     align-self: center;
+}
+
+.bloco_texto {
+    display: flex;
+    flex-direction: column;
+}
+
+p.texto {
+	font-size: 1.2rem;
+    margin: 0;
+}
+
+p.titulo {
+	font-size: 1.5rem;
+	margin: 0;
 }
