--- a/frontend/src/Recursos/EstilizacaoCompartilhada/detalhes_popover.module.css
+++ b/frontend/src/Recursos/EstilizacaoCompartilhada/detalhes_popover.module.css
@@ -104,3 +104,12 @@ p.titulo {
 	font-size: 1.5rem;
 	margin: 0;
 }
+
+.quantidade_agrupada {
+    position: absolute;
+    top: 0;
+    right: 0;
+    color: white;
+    padding: 2%;
+    font-size: 1rem;
+}
