Estou interrompendo momentanemente as armas para retrabalhar os detalhes. O objetivo é fazer o remedio funcionar com uma base de informação que contemple tmb as armas sem características

--- a/frontend/src/Pages/Shop/style.module.css
+++ b/frontend/src/Pages/Shop/style.module.css
@@ -160,3 +160,20 @@
     justify-content: space-evenly;
     width: 100%;
 }
+
+.opcoes_arma {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 80%;
+    justify-content: space-evenly;
+}
+
+.info_arma {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    width: 50%;
+    gap: 5%;
+}
