--- a/frontend/src/Pages/Shop/style.module.css
+++ b/frontend/src/Pages/Shop/style.module.css
@@ -191,3 +191,19 @@
     justify-content: center;
     width: 60%;
 }
+
+.dados_arma {
+    display: flex;
+    flex-direction: column;
+    width: 30%;
+    gap: .4vh;
+    color: white;
+    padding: .6vw 1vh;
+    background-color: rgba(100, 100, 100, 0.2);
+    box-shadow: 0 .6vh 10px rgba(0, 0, 0, 0.5);
+}
+
+.linha_dado_arma {
+    display: flex;
+    justify-content: space-between;
+}
