Parcial denovo (tentando arrumar as propriedades flex da area_item)

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -4,6 +4,10 @@ body {
     overflow: hidden;
 }
 
+button {
+    cursor: pointer;
+}
+
 .app-container {
     display: flex;
     flex-direction: column;
