--- a/frontend/src/Recursos/Componentes/ModalDialog/style.module.css
+++ b/frontend/src/Recursos/Componentes/ModalDialog/style.module.css
@@ -27,8 +27,10 @@
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	width: 90vw;
-	max-width: 450px;
+	width: auto;
+    max-width: 90vw;
+	/* width: 90vw;
+	max-width: 450px; */
 	max-height: 85vh;
 	padding: 25px;
 	animation: contentShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
