--- a/frontend/src/Recursos/EstilizacaoCompartilhada/detalhes_popover.module.css
+++ b/frontend/src/Recursos/EstilizacaoCompartilhada/detalhes_popover.module.css
@@ -98,6 +98,12 @@
 .bloco_texto {
     display: flex;
     flex-direction: column;
+    gap: 1vh;
+}
+
+.bloco_texto {
+    display: flex;
+    flex-direction: column;
 }
 
 p.texto {
@@ -108,6 +114,20 @@ p.texto {
 p.titulo {
 	font-size: 1.5rem;
 	margin: 0;
+}
+
+summary {
+    font-size: 1.3rem;
+	margin: 0; 
+}
+
+.texto_details {
+    font-size: 1rem;
+	margin: 0;  
+}
+
+span.bold {
+    font-weight: bold;
 }
 
 .quantidade_agrupada {
