--- a/frontend/src/Components/ConsultaFicha/style.module.css
+++ b/frontend/src/Components/ConsultaFicha/style.module.css
@@ -50,13 +50,22 @@
 }
 
 .registros {
+    display: grid;
+    grid-template-columns: repeat(6, minmax(0, 1fr)); 
+    text-align: center;
+    color: white;
+    width: 60%;
+    gap: 1rem;
+    row-gap: 2vh;
+}
+/* .registros {
     display: flex;
     flex-direction: row;
     text-align: center;
     color: white;
+    width: 60%;
     gap: 2%;
     row-gap: 2vh;
-    justify-content: center;
-    width: 60%;
     flex-wrap: wrap;
-}
+    justify-content: center;
+} */
