--- a/frontend/src/Recursos/EstilizacaoCompartilhada/detalhes_popover.module.css
+++ b/frontend/src/Recursos/EstilizacaoCompartilhada/detalhes_popover.module.css
@@ -2,12 +2,23 @@
     display: flex;
     flex-direction: column;
     gap: .5vh;
-    align-items: center;
+    /* align-items: center; */
     pointer-events: none;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    width: 100%;
 }
 
 .embrulho_icone h3 {
-    margin: 0
+    margin: 0;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.embrulho_icone_localizado {
+    align-items: center;
 }
 
 .icone {
@@ -21,6 +32,7 @@
     background-position: center;
     cursor: pointer;
     pointer-events: auto;
+    margin: auto;
 }
 
 .icone_item {
