--- a/frontend/src/Pages/EditaFicha/style.module.css
+++ b/frontend/src/Pages/EditaFicha/style.module.css
@@ -4,8 +4,9 @@
     color: white;
     width: 100%;
     margin: 1vh 0 0 0;
-    gap: 2vh;
+    gap: 4vh;
     overflow-y: auto;
+    flex: 1;
 }
 
 .editando_ficha h1, .editando_ficha h2, .editando_ficha h3 {
@@ -25,6 +26,8 @@
     margin: 0 auto;
     gap: 3vh;
     align-items: center;
+    flex: 1 0 0;
+    overflow: hidden;
 }
 
 .editando_ficha_atributos {
@@ -94,6 +97,7 @@
     flex-direction: row;
     justify-content: center;
     gap: 5%;
+    flex: 0 0 0;
 }
 
 .editando_ficha .prosseguir {
