--- a/frontend/src/Recursos/EstilizacaoCompartilhada/detalhes_popover.module.css
+++ b/frontend/src/Recursos/EstilizacaoCompartilhada/detalhes_popover.module.css
@@ -42,7 +42,7 @@
     border: 3px solid #7b7b7b77;
     border-radius: 5%;
     box-shadow: inset 0px 0px 9px 2px #85858555;
-    padding: 2%;
+    padding: .65vh .3vw;
     pointer-events: auto;
     margin: auto;
 }
@@ -108,7 +108,7 @@
     align-self: center;
 }
 
-.bloco_texto {
+.bloco_texto_espaçado {
     display: flex;
     flex-direction: column;
     gap: 1vh;
@@ -150,4 +150,8 @@ span.bold {
     color: white;
     padding: 2%;
     font-size: 1rem;
+}
+
+.mensagem_erro {
+    color: red;
 }
