Finalizado detalhamente de bonus na pericia e trocado hover-card para tooltip

--- a/frontend/src/Components/LayoutAbas/style.module.css
+++ b/frontend/src/Components/LayoutAbas/style.module.css
@@ -64,9 +64,9 @@
     padding: 1%;
 }
 
-.conteudo_aba h1 {
+/* .conteudo_aba h1 {
     margin: 0;
-}
+} */
 
 .wrapper_aba > * {
     border: 2px white solid;
