--- a/frontend/src/Recursos/Componentes/ModalDialog/style.module.css
+++ b/frontend/src/Recursos/Componentes/ModalDialog/style.module.css
@@ -1,14 +1,9 @@
-@import "@radix-ui/colors/black-alpha.css";
-@import "@radix-ui/colors/green.css";
-@import "@radix-ui/colors/mauve.css";
-@import "@radix-ui/colors/violet.css";
-
 .modal_container button, .modal_container fieldset, .modal_container input {
     all: unset;
 }
 
 .dialog_overlay {
-	background-color: var(--black-a9);
+	background-color: rgba(0, 0, 0, 0.7);
 	position: fixed;
 	inset: 0;
 	animation: overlayShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
@@ -45,7 +40,7 @@
 .dialog_titulo {
 	margin: 0;
 	font-weight: 500;
-	color: var(--mauve-12);
+	color: '#211F26';
 	font-size: 2rem;
     line-height: 1;
 }
@@ -58,14 +53,14 @@
 	display: inline-flex;
 	align-items: center;
 	justify-content: center;
-	color: var(--violet-11);
+	color: '#6550B9';
 	position: absolute;
 	top: 10px;
 	right: 10px;
 }
 
-.dialog_botao_fechar:hover { background-color: var(--violet-4); }
-.dialog_botao_fechar:focus { box-shadow: 0 0 0 2px var(--violet-7); }
+.dialog_botao_fechar:hover { background-color: '#EBE4FF'; }
+.dialog_botao_fechar:focus { box-shadow: 0 0 0 2px '#C2B5F5'; }
 
 @keyframes overlayShow {
 	from {
@@ -100,24 +95,24 @@
 }
 .Button.violet {
 	background-color: white;
-	color: var(--violet-11);
-	box-shadow: 0 2px 10px var(--black-a7);
+	color: '#6550B9';
+	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
 }
 .Button.violet:hover {
-	background-color: var(--mauve-3);
+	background-color: '#F2EFF3';
 }
 .Button.violet:focus {
 	box-shadow: 0 0 0 2px black;
 }
 .Button.green {
-	background-color: var(--green-4);
-	color: var(--green-11);
+	background-color: '#D6F1DF';
+	color: '#218358';
 }
 .Button.green:hover {
-	background-color: var(--green-5);
+	background-color: '#C4E8D1';
 }
 .Button.green:focus {
-	box-shadow: 0 0 0 2px var(--green-7);
+	box-shadow: 0 0 0 2px '#8ECEAA';
 }
 
 .dialog_conteudo_corpo {
@@ -136,7 +131,7 @@
 
 .Label {
 	font-size: 15px;
-	color: var(--violet-11);
+	color: '#6550B9';
 	width: 90px;
 	text-align: right;
 }
@@ -151,10 +146,10 @@
 	padding: 0 10px;
 	font-size: 15px;
 	line-height: 1;
-	color: var(--violet-11);
-	box-shadow: 0 0 0 1px var(--violet-7);
+	color: '#6550B9';
+	box-shadow: 0 0 0 1px '#C2B5F5';
 	height: 35px;
 }
 .Input:focus {
-	box-shadow: 0 0 0 2px var(--violet-8);
+	box-shadow: 0 0 0 2px '#AA99EC';
 } */
