--- a/frontend/src/Recursos/Componentes/Popover/style.module.css
+++ b/frontend/src/Recursos/Componentes/Popover/style.module.css
@@ -1,7 +1,3 @@
-@import "@radix-ui/colors/black-alpha.css";
-@import "@radix-ui/colors/mauve.css";
-@import "@radix-ui/colors/violet.css";
-
 /* reset */
 /* button,
 fieldset,
@@ -36,7 +32,7 @@ input {
 	box-shadow:
 		hsl(206 22% 7% / 35%) 0px 10px 38px -10px,
 		hsl(206 22% 7% / 20%) 0px 10px 20px -15px,
-		0 0 0 2px var(--violet-7);
+		0 0 0 2px '#C2B5F5';
 }
 
 .popover_content[data-state="open"][data-side="top"] { animation-name: slideDownAndFade; }
@@ -53,14 +49,14 @@ input {
 	display: inline-flex;
 	align-items: center;
 	justify-content: center;
-	color: var(--violet-11);
+	color: '#6550B9';
 	position: absolute;
 	top: 5px;
 	right: 5px;
 }
 
-.popover_close:hover { background-color: var(--violet-4); }
-.popover_close:focus { box-shadow: 0 0 0 2px var(--violet-7); }
+.popover_close:hover { background-color: '#EBE4FF'; }
+.popover_close:focus { box-shadow: 0 0 0 2px '#C2B5F5'; }
 /* .popover_trigger button {
     all: unset;
 	font-family: inherit;
@@ -68,11 +64,11 @@ input {
 	display: inline-flex;
 	align-items: center;
 	justify-content: center;
-	color: var(--violet-11);
-	box-shadow: 0 2px 10px var(--black-a7);
+	color: '#6550B9';
+	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
 } */
 
-.popover_trigger button:hover { background-color: var(--violet-3); }
+.popover_trigger button:hover { background-color: '#F4F0FE'; }
 .popover_trigger button:focus { box-shadow: 0 0 0 2px black; }
 
 /* .Fieldset {
@@ -83,7 +79,7 @@ input {
 
 .Label {
 	font-size: 13px;
-	color: var(--violet-11);
+	color: '#6550B9';
 	width: 75px;
 }
 
@@ -97,17 +93,17 @@ input {
 	padding: 0 10px;
 	font-size: 13px;
 	line-height: 1;
-	color: var(--violet-11);
-	box-shadow: 0 0 0 1px var(--violet-7);
+	color: '#6550B9';
+	box-shadow: 0 0 0 1px '#C2B5F5';
 	height: 25px;
 }
 .Input:focus {
-	box-shadow: 0 0 0 2px var(--violet-8);
+	box-shadow: 0 0 0 2px '#AA99EC';
 }
 
 .Text {
 	margin: 0;
-	color: var(--mauve-12);
+	color: '#211F26';
 	font-size: 15px;
 	line-height: 19px;
 	font-weight: 500;
