--- a/frontend/src/Recursos/Componentes/Tooltip/style.module.css
+++ b/frontend/src/Recursos/Componentes/Tooltip/style.module.css
@@ -1,3 +1,24 @@
+.tooltip_gatilho {
+	position: relative;
+}
+
+.tooltip_gatilho:before {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 50%;
+	width: .6rem;
+	height: .6rem;
+	border: .3rem solid #87CEFA;
+	border-radius: 50%;
+	transform: translate(-50%, -50%) rotate(45deg);
+	clip-path: polygon(50% 50%, 0 0, 0 0, 0 0, 0 0, 0 0);
+}
+  
+.tooltip_gatilho:hover::before {
+	animation: spin 0.6s linear forwards, fadeOut 0.3s ease 0.6s forwards;
+}
+
 .tooltip_conteudo {
 	display: flex;
 	flex-direction: column;
@@ -17,6 +38,7 @@
 	text-align: justify;
 	max-width: 17vw;
 }
+
 .tooltip_conteudo[data-state="delayed-open"][data-side="top"] { animation-name: slideDownAndFade; }
 .tooltip_conteudo[data-state="delayed-open"][data-side="right"] { animation-name: slideLeftAndFade; }
 .tooltip_conteudo[data-state="delayed-open"][data-side="bottom"] { animation-name: slideUpAndFade; }
@@ -80,5 +102,29 @@
 	to {
 		opacity: 1;
 		transform: translateX(0);
+	}
+}
+
+@keyframes spin {
+	25% {
+		clip-path: polygon(50% 50%, 0 0, 0 100%, 0 100%, 0 100%, 0 100%);
+	}
+
+	50% {
+		clip-path: polygon(50% 50%, 0 0, 0 100%, 100% 100%, 100% 100%, 100% 100%);
+	}
+
+	75% {
+		clip-path: polygon(50% 50%, 0 0, 0 100%, 100% 100%, 100% 0, 100% 0);
+	}
+
+	100% {
+		clip-path: polygon(50% 50%, 0 0, 0 100%, 100% 100%, 100% 0, 0 0);
+	}
+}
+
+@keyframes fadeOut {
+	to {
+	  opacity: 0;
 	}
 }
