--- a/frontend/src/Components/SubComponents/SubComponentesFicha/BarraEstatisticaDanificavel/style.module.css
+++ b/frontend/src/Components/SubComponents/SubComponentesFicha/BarraEstatisticaDanificavel/style.module.css
@@ -3,7 +3,7 @@
     border-radius: 5px;
     color: white;
     overflow: hidden;
-    height: 1em;
+    flex: 1;
 }
 
 .estatistica_barra {
@@ -11,9 +11,10 @@
     flex-direction: column;
     flex: 1;
     gap: 1vh;
+    text-align: center;
 }
 
-.estatistica_barra h2 {
+.estatistica_barra h3 {
     margin: 0;
     font-size: 1em;
     color: white;
@@ -49,10 +50,9 @@
 }
 
 .span_estatistica {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  font-size: .7em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
 }
