--- a/frontend/src/Recursos/Componentes/BarraMenu/style.module.css
+++ b/frontend/src/Recursos/Componentes/BarraMenu/style.module.css
@@ -1,7 +1,9 @@
 .barra_menu {
-	display: flex;
-    background-color: white;
-    height: 100%;
+	display: inline-block;
+}
+
+.barra_menu > button {
+    all: unset;
 }
 
 .menu_item {
@@ -17,6 +19,7 @@
     box-shadow: 0 0px 1px black;
     padding: 0 .2vw;
     height: 100%;
+	z-index: 200;
 }
 
 .menu_item:hover {
@@ -53,6 +56,7 @@
 	animation-duration: 400ms;
 	animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
 	will-change: transform, opacity;
+	z-index: 200;
 }
 
 .objeto_menu_item,
