--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,18 +1,35 @@
 body {
+    background: linear-gradient(to bottom, #0b1623 0%, #1e3a5f 50%, #0b1623 100%);
     margin: 0;
-    padding: 0;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#root {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     overflow: hidden;
 }
 
-button {
-    cursor: pointer;
+body::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    height: 100%;
+    /* background: radial-gradient(circle, #292b2457 0%, transparent 63%); */
 }
 
-.app-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 100vh;
-    width: 100vw;
-    background: linear-gradient(180deg, #000000 12%, #22153B 65%, #000000 100%);
+/* remove margin filho */
+.noMargin {
+    margin: 0;
+}
+
+:root {
+    --cor1: #2be5ff8c;
 }
