--- a/frontend/src/Componentes/ConsultaGenerica/style.module.css
+++ b/frontend/src/Componentes/ConsultaGenerica/style.module.css
@@ -15,6 +15,7 @@
 .conteudo_consulta {
     display: flex;
     flex-direction: column;
+    width: 100%;
     gap: 2vh;
     flex: 1 0 0;
     align-items: center;
