Comitando para fazer merda, mudando o objeto de edição no NexUp para o proprio objeto do personagem

--- a/frontend/src/Componentes/JanelaNotificacao/style.module.css
+++ b/frontend/src/Componentes/JanelaNotificacao/style.module.css
@@ -2,7 +2,7 @@
     position: absolute;
     display: flex;
     flex-direction: column;
-    top: 0;
+    top: 8%;
     right: 0;
     width: 20%;
     max-height: 30vh;
