--- a/frontend/src/Paginas/Demonstracao/style.module.css
+++ b/frontend/src/Paginas/Demonstracao/style.module.css
@@ -38,15 +38,22 @@
 .secao_edicao_centro {
     display: flex;
     flex-direction: column;
-    flex: 1 0 0;
+    flex: 1;
     overflow: auto;
     width: 100%;
+    gap: 2vh;
+}
+
+.titulo_edicao_ficha {
+    margin: auto;
+    font-size: 2.5em;
 }
 
 .recipiente_edicao {
-    width: 30%;
+    width: 100%;
     margin: 0 auto;
-    height: 100%;
+    flex: 1 0 0;
+    overflow: auto;
 }
 
 .secao_cima {
@@ -149,4 +156,22 @@
     display: flex;
     width: 90%;
     flex: 1;
+}
+
+.botoes {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 5%;
+    flex: 0 0 0;
+}
+
+.secao_edicao_centro .prosseguir, .recipiente_botao_desabilitado {
+    width: 6%;
+    height: 4vh;
+}
+
+.recipiente_botao_desabilitado button {
+    width: 100%;
+    height: 100%;
 }
